[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/island/bridge.png" type="Texture" id=1]
[ext_resource path="res://scripts/basic_body.gd" type="Script" id=2]
[ext_resource path="res://scripts/level 3/bridge.gd" type="Script" id=3]
[ext_resource path="res://assets/level 3/gap.png" type="Texture" id=4]
[ext_resource path="res://assets/island/bridge-2.png.png" type="Texture" id=5]
[ext_resource path="res://assets/general/white.png" type="Texture" id=6]
[ext_resource path="res://assets/island/bridge_R.png" type="Texture" id=7]
[ext_resource path="res://assets/items/wood.png" type="Texture" id=8]
[ext_resource path="res://scenes/level 3/time.tscn" type="PackedScene" id=9]

[sub_resource type="TileSet" id=1]
0/name = "bridge-2.png.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "bridge.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "bridge_R.png 2"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "gap.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20.9786, 15.3874 )

[sub_resource type="Animation" id=3]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("body/TileMap:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 0.12549, 0.121569, 0.121569, 1 ), Color( 0.12549, 0.121569, 0.121569, 1 ), Color( 0.12549, 0.121569, 0.121569, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_no_take"
} ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 55.8986, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 11.1339, 17.2178 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 50, 40 )

[node name="bridge" type="Node2D"]
z_index = 2
script = ExtResource( 3 )
Time = ExtResource( 9 )

[node name="body" type="StaticBody2D" parent="." groups=[
"item",
]]
script = ExtResource( 2 )

[node name="glow" type="Sprite" parent="body"]
visible = false
modulate = Color( 8, 8, 8, 1 )
self_modulate = Color( 0.0431373, 0.0941176, 0.0980392, 0.584314 )
position = Vector2( 15.0437, 16.9917 )
scale = Vector2( 1.06018, 0.938644 )
z_index = 1
texture = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="body"]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 65534, 0, 0, 65535, 1, 0, 0, 3, 0, 1, 2, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
position = Vector2( 12.8848, 17.0249 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="body"]
visible = false
position = Vector2( 14.3418, 17.2948 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/burn = SubResource( 3 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 1.50165, 13.3074 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 0.0962791, -23.5885 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( -0.0962868, 28.9802 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="." groups=[
"target",
]]
position = Vector2( 39.3013, 9.73997 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.138374, 6.36527 )
shape = SubResource( 5 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="." groups=[
"touch",
]]
visible = false
position = Vector2( 2.93171, 15.633 )
shape = SubResource( 6 )
shape_centered = false

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="body" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
